--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-twemoji": "^0.3.0",
+    "use-ackee": "^3.0.0",
     "web-vitals": "^2.1.0"
   },
   "devDependencies": {
