New env values for example

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,3 @@
-REACT_APP_PROTESTANTBOT_API_URL=https://botlutero.herokuapp.com
+REACT_APP_PROTESTANTBOT_API_URL=https://protestantbotapi.herokuapp.com
+PUBLIC_URL=https://protestantbot.leocarvalho.dev
+HTTPS=true
