--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
-REACT_APP_PROTESTANTBOT_API_URL=https://protestantbotapi.herokuapp.com
+REACT_APP_PROTESTANTBOT_API_URL=https://protestantbot.leocarvalho.dev/api
 PUBLIC_URL=https://protestantbot.leocarvalho.dev
 HTTPS=true
