--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@craco/craco": "^6.2.0",
     "@popperjs/core": "^2.10.1",
     "axios": "^0.21.1",
     "bootstrap": "^5.1.0",
@@ -29,12 +30,15 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
-    "@testing-library/user-event": "^13.2.1"
+    "@testing-library/user-event": "^13.2.1",
+    "glob-all": "^3.2.1",
+    "path": "^0.12.7",
+    "purgecss-webpack-plugin": "^4.0.3"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test --env=jsdom",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
