--- a/package.json
+++ b/package.json
@@ -31,9 +31,11 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
-    "glob-all": "^3.2.1",
-    "path": "^0.12.7",
-    "purgecss-webpack-plugin": "^4.0.3"
+    "autoprefixer": "^10.3.4",
+    "css-loader": "^6.2.0",
+    "postcss-loader": "^6.1.1",
+    "sass": "^1.39.2",
+    "sass-loader": "^12.1.0"
   },
   "scripts": {
     "start": "craco start",
