--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "autoprefixer": "^10.3.4",
     "css-loader": "^6.2.0",
     "postcss-loader": "^6.1.1",
+    "prop-types": "^15.7.2",
     "sass": "^1.39.2",
     "sass-loader": "^12.1.0"
   },
