--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "workbox-streams": "^5.1.4"
   },
   "devDependencies": {
+    "@babel/register": "^7.15.3",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
@@ -36,6 +37,7 @@
     "css-loader": "^6.2.0",
     "postcss-loader": "^6.1.1",
     "prop-types": "^15.7.2",
+    "react-router-sitemap": "^1.2.0",
     "sass": "^1.39.2",
     "sass-loader": "^12.1.0"
   },
