--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
 REACT_APP_PROTESTANTBOT_API_URL=https://protestantbot-api.leocarvalho.dev/api
 PUBLIC_URL=https://protestantbot.leocarvalho.dev
 HTTPS=true
+REACT_APP_ANALYTICS_SERVER=https://analytics.leocarvalho.dev
+REACT_APP_ANALYTICS_ID=hexadecimal_id
