Create example env to Event for Ackee

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,4 @@ PUBLIC_URL=https://protestantbot.leocarvalho.dev
 HTTPS=true
 REACT_APP_ANALYTICS_SERVER=https://analytics.leocarvalho.dev
 REACT_APP_ANALYTICS_ID=hexadecimal_id
+REACT_APP_EVENT_ID=hexadecimal_id
