--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "ackee-tracker": "^5.1.0",
     "axios": "^0.21.1",
     "bootstrap": "^5.1.0",
+    "bootstrap-icons": "^1.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet-async": "^1.1.2",
