--- a/package.json
+++ b/package.json
@@ -36,10 +36,14 @@
     "@testing-library/user-event": "^13.2.1",
     "autoprefixer": "^10.3.6",
     "css-loader": "^6.3.0",
+    "postcss-custom-properties": "^12.0.0",
     "postcss-loader": "^6.1.1",
     "prop-types": "^15.7.2",
     "sass": "^1.42.1",
     "sass-loader": "^12.1.0"
+  },
+  "resolutions": {
+    "react-scripts/postcss-preset-env/postcss-custom-properties": "^12.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
