--- a/package.json
+++ b/package.json
@@ -40,12 +40,14 @@
     "postcss-loader": "^6.1.1",
     "prop-types": "^15.7.2",
     "sass": "^1.42.1",
-    "sass-loader": "^12.1.0"
+    "sass-loader": "^12.1.0",
+    "source-map-explorer": "^2.5.2"
   },
   "resolutions": {
     "react-scripts/postcss-preset-env/postcss-custom-properties": "^12.0.0"
   },
   "scripts": {
+    "analyze": "source-map-explorer 'build/static/js/*.js'",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
