--- a/package.json
+++ b/package.json
@@ -1,21 +1,46 @@
 {
   "name": "protestant-bot-front",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
+  "scripts": {
+    "analyze": "source-map-explorer 'build/static/js/*.js'",
+    "build": "react-scripts build",
+    "eject": "react-scripts eject",
+    "start": "react-scripts start",
+    "test": "react-scripts test --env=jsdom"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
   "dependencies": {
-    "@popperjs/core": "^2.10.1",
+    "@popperjs/core": "^2.11.4",
     "ackee-tracker": "^5.1.0",
-    "axios": "^0.21.4",
-    "bootstrap": "^5.1.1",
-    "bootstrap-icons": "^1.5.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-helmet-async": "^1.1.2",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
-    "react-twemoji": "^0.3.0",
-    "use-ackee": "^3.0.0",
-    "web-vitals": "^2.1.0",
+    "axios": "^0.26.1",
+    "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.8.1",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-helmet-async": "^1.2.3",
+    "react-router-dom": "^6.0.1",
+    "react-scripts": "5.0.0",
+    "react-twemoji": "^0.5.0",
+    "use-ackee": "^3.0.1",
+    "web-vitals": "^2.1.4",
     "workbox-background-sync": "^5.1.4",
     "workbox-broadcast-update": "^5.1.4",
     "workbox-cacheable-response": "^5.1.4",
@@ -34,46 +59,13 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.1.1",
     "@testing-library/user-event": "^13.2.1",
-    "autoprefixer": "^10.3.6",
-    "css-loader": "^6.3.0",
-    "postcss-custom-properties": "^12.0.0",
-    "postcss-loader": "^6.1.1",
+    "autoprefixer": "^10.4.4",
+    "css-loader": "^6.7.1",
+    "postcss-custom-properties": "^12.1.5",
+    "postcss-loader": "^6.2.1",
     "prop-types": "^15.7.2",
-    "sass": "^1.42.1",
-    "sass-loader": "^12.1.0",
+    "sass": "^1.49.9",
+    "sass-loader": "^12.6.0",
     "source-map-explorer": "^2.5.2"
-  },
-  "resolutions": {
-    "react-scripts/postcss-preset-env/postcss-custom-properties": "^12.0.0",
-    "browserslist": "4.16.5",
-    "ansi-regex": "5.0.1",
-    "shell-quote": "1.7.3",
-    "set-value": "4.0.1",
-    "immer": "9.0.6"
-  },
-  "scripts": {
-    "analyze": "source-map-explorer 'build/static/js/*.js'",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
   }
 }
