--- a/package.json
+++ b/package.json
@@ -28,44 +28,49 @@
     ]
   },
   "dependencies": {
-    "@popperjs/core": "^2.11.4",
+    "@popperjs/core": "^2.11.5",
     "ackee-tracker": "^5.1.0",
-    "axios": "^0.26.1",
+    "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
-    "bootstrap-icons": "^1.8.1",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "react-helmet-async": "^1.2.3",
-    "react-router-dom": "^6.0.1",
-    "react-scripts": "5.0.0",
+    "bootstrap-icons": "^1.8.3",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
+    "react-helmet-async": "^1.3.0",
+    "react-router-dom": "^6.3.0",
+    "react-scripts": "5.0.1",
     "react-twemoji": "^0.5.0",
     "use-ackee": "^3.0.1",
     "web-vitals": "^2.1.4",
-    "workbox-background-sync": "^5.1.4",
-    "workbox-broadcast-update": "^5.1.4",
-    "workbox-cacheable-response": "^5.1.4",
-    "workbox-core": "^5.1.4",
-    "workbox-expiration": "^5.1.4",
-    "workbox-google-analytics": "^5.1.4",
-    "workbox-navigation-preload": "^5.1.4",
-    "workbox-precaching": "^5.1.4",
-    "workbox-range-requests": "^5.1.4",
-    "workbox-routing": "^5.1.4",
-    "workbox-strategies": "^5.1.4",
-    "workbox-streams": "^5.1.4"
+    "workbox-background-sync": "^6.5.3",
+    "workbox-broadcast-update": "^6.5.3",
+    "workbox-cacheable-response": "^6.5.3",
+    "workbox-core": "^6.5.3",
+    "workbox-expiration": "^6.5.3",
+    "workbox-google-analytics": "^6.5.3",
+    "workbox-navigation-preload": "^6.5.3",
+    "workbox-precaching": "^6.5.3",
+    "workbox-range-requests": "^6.5.3",
+    "workbox-routing": "^6.5.3",
+    "workbox-strategies": "^6.5.3",
+    "workbox-streams": "^6.5.3"
   },
   "devDependencies": {
-    "@babel/register": "^7.15.3",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^12.1.1",
-    "@testing-library/user-event": "^13.2.1",
-    "autoprefixer": "^10.4.4",
+    "@babel/register": "^7.17.7",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.3.0",
+    "@testing-library/user-event": "^14.2.0",
     "css-loader": "^6.7.1",
-    "postcss-custom-properties": "^12.1.5",
-    "postcss-loader": "^6.2.1",
-    "prop-types": "^15.7.2",
-    "sass": "^1.49.9",
-    "sass-loader": "^12.6.0",
+    "postcss-custom-properties": "^12.1.7",
+    "postcss-loader": "^7.0.0",
+    "prop-types": "^15.8.1",
+    "sass": "^1.52.2",
+    "sass-loader": "^13.0.0",
     "source-map-explorer": "^2.5.2"
+  },
+  "resolutions": {
+    "autoprefixer": "10.4.5"
+  },
+  "overrides": {
+    "autoprefixer": "^10.4.5"
   }
 }
