--- a/package.json
+++ b/package.json
@@ -28,49 +28,49 @@
     ]
   },
   "dependencies": {
-    "@popperjs/core": "^2.11.5",
-    "ackee-tracker": "^5.1.0",
-    "axios": "^0.27.2",
-    "bootstrap": "^5.1.3",
-    "bootstrap-icons": "^1.8.3",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
+    "@popperjs/core": "^2.11.6",
+    "axios": "^1.2.1",
+    "bootstrap": "^5.2.3",
+    "bootstrap-icons": "^1.10.0",
+    "history": "^5.3.0",
+    "plausible-tracker": "^0.3.8",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-helmet-async": "^1.3.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-twemoji": "^0.5.0",
-    "use-ackee": "^3.0.1",
-    "web-vitals": "^2.1.4",
-    "workbox-background-sync": "^6.5.3",
-    "workbox-broadcast-update": "^6.5.3",
-    "workbox-cacheable-response": "^6.5.3",
-    "workbox-core": "^6.5.3",
-    "workbox-expiration": "^6.5.3",
-    "workbox-google-analytics": "^6.5.3",
-    "workbox-navigation-preload": "^6.5.3",
-    "workbox-precaching": "^6.5.3",
-    "workbox-range-requests": "^6.5.3",
-    "workbox-routing": "^6.5.3",
-    "workbox-strategies": "^6.5.3",
-    "workbox-streams": "^6.5.3"
+    "web-vitals": "^3.1.0",
+    "workbox-background-sync": "^6.5.4",
+    "workbox-broadcast-update": "^6.5.4",
+    "workbox-cacheable-response": "^6.5.4",
+    "workbox-core": "^6.5.4",
+    "workbox-expiration": "^6.5.4",
+    "workbox-google-analytics": "^6.5.4",
+    "workbox-navigation-preload": "^6.5.4",
+    "workbox-precaching": "^6.5.4",
+    "workbox-range-requests": "^6.5.4",
+    "workbox-routing": "^6.5.4",
+    "workbox-strategies": "^6.5.4",
+    "workbox-streams": "^6.5.4"
   },
   "devDependencies": {
-    "@babel/register": "^7.17.7",
+    "@babel/register": "^7.18.9",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^14.2.0",
-    "css-loader": "^6.7.1",
-    "postcss-custom-properties": "^12.1.7",
-    "postcss-loader": "^7.0.0",
+    "css-loader": "^6.7.3",
+    "postcss-custom-properties": "^12.1.11",
+    "postcss-loader": "^7.0.2",
     "prop-types": "^15.8.1",
-    "sass": "^1.52.2",
-    "sass-loader": "^13.0.0",
-    "source-map-explorer": "^2.5.2"
+    "sass": "^1.57.1",
+    "sass-loader": "^13.2.0",
+    "source-map-explorer": "^2.5.3"
   },
   "resolutions": {
-    "autoprefixer": "10.4.5"
+    "autoprefixer": "10.4.13"
   },
   "overrides": {
-    "autoprefixer": "^10.4.5"
+    "autoprefixer": "^10.4.13"
   }
 }
